# researchhub

./: .gitignore  .replit  app.db  index.html  pyproject.toml  replit.md  tailwind.config.ts  vercel.json  vite.config.ts
api/: index.py
attached_assets/: Pasted-Add-advanced-search-and-filtering-system-to-the-Researc_1779364228826.txt  Pasted-Add-advanced-visualization-contextual-commenting-and-ex_1779381257939.txt  Pasted-Add-decentralized-research-storage-using-IPFS-to-the-Re_1779380638051.txt  Pasted-Add-robust-real-time-collaborative-manuscript-editing-t_1779376140625.txt  Pasted-Fix-all-manuscript-editor-persistence-version-history-c_1779354367910.txt  Pasted-Fix-and-fully-implement-real-dataset-upload-download-pe_1779362807754.txt  Pasted-Fix-dataset-and-experiment-file-uploads-completely-in-t_1779363551271.txt  Pasted-Fix-manuscript-saving-failures-and-completely-improve-c_1779356641663.txt  Pasted-Fix-the-AI-Writing-Assistant-because-it-is-currently-re_1779360970689.txt  Pasted-Fix-the-collaborative-chat-system-so-it-supports-BOTH-1_1779299403289.txt  Pasted-Fix-the-contextual-comment-system-and-export-functional_1779382429458.txt  Pasted-We-are-now-implementing-the-next-major-Sprint-3-upgrade_1779300318565.txt  Pasted-We-are-now-implementing-the-next-major-Sprint-3-upgrade_1779359616512.txt  Pasted-ix-the-collaborative-chat-system-so-it-supports-BOTH-Re_1779299384955.txt
backend/: requirements.txt
backend/app/: auth.py  database.py  email_utils.py  ipfs_client.py  main.py  manuscript_manager.py  models.py  schemas.py  ws_manager.py
src/: App.tsx  index.css
(+38 files in other folders)
