[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.36",
    "uvicorn==0.32.1",
    "websockets>=16.0",
]
